# optee_tls

./: .gitignore  CMakeLists.txt  README.md  compile.sh  download.sh
host/: main.c
ta/: Makefile  demo.c  hello_world_ta.c  mbed_optee_compat.c  mbedhack.c  sub.mk  user_ta_header_defines.h
ta/include/: hello_world_ta.h  pubpriv.h
